<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stiqer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="connection_error">Network connection error</string>
    
    <string name="username_empty">Username cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="nickname_empty">昵称能为空</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_username_empty">Email/Username cannot be empty</string>
    <string name="email_mismatch">Email mismatch</string>
    <string name="reg_username_exist">Username has existed, please try another one</string>
    <string name="reg_email_exist">Mail has registered, please try login in</string>
    <string name="login_loading">Login.....</string>
    <string name="register_loading">Registering ...</string>
    <string name="complete_loading">Logging in ...</string>
    <string name="email_not_exist">Email address is not exist</string>
    <string name="email_pass_mismatch">Email and password mismatch</string>
    <string name="repass_mismatch">两次密码输入不匹配</string>
    <string name="token_expires">Token expires, please login in</string>

    <string name="username">Username</string>
    <string name="email_name">Email</string>
    <string name="login_username">Your email address or Username</string>
    <string name="password">Your password</string>
    <string name="reg_password">At least 8 characters long</string>
    <string name="reg_email">Your favorite email address</string>
    
    <string name="repassword">Password again</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    
    <string name="server_inner_error">Server inner error</string>
    <string name="params_error">Parameters Error</string>
    <string name="resource_not_found">Resource Not Found</string>
    <string name="scan_multiple">Scan Multiple</string>
    <string name="code_not_found">Scan Code Not Found</string>
    <string name="user_not_found">User Not Found</string>
    <string name="store_not_found">Store Not Found</string>
    <string name="avatar_upload">Upload successful</string>
    
    <string name="load_over">no data received</string>
    <string name="feed_not_found">feed not found</string>
    <string name="favor_not_found">Favor not found</string>
    <string name="permission_deny">Permission deny</string>
    <string name="delete_success">Delete success</string>
    
    <string name="pull_to_refresh">Pull to refresh</string>  
    <string name="release_to_refresh">Release to refresh</string>  
    <string name="refreshing">refreshing…</string>  
    <string name="not_updated_yet">Not updated yet</string>  
    <string name="updated_at">Updated at %1$s</string>  
    <string name="updated_just_now">Updated just now</string>  
    <string name="time_error">Time error</string> 
    <string name="unknown_error">Unknow Error</string> 
    
    <string name="promo_not_found">Promo not found</string> 
    <string name="promo_not_redeem">Promo not redeemable</string> 
    <string name="promo_be_redeemed">Promo must be redeemed with store QR</string>
    
    <string name="not_friend_hint">You have no friends. Add your friends to stiqer to redeem rewards together!</string>
    
    <string name="app_id">592399090850993</string>
    
    <string-array name="menus">
       <item>Profile</item>  
       <item>Home</item> 
       <item>Messages</item> 
       <item>Friends</item> 
       <item>Promotions</item> 
       <item>Stores</item> 
       <item>Favorites</item>
       <item>Settings</item>
    </string-array>

</resources>
